frontend/tests/cases/positive/polymorphism/poly.gr
diagE : ∀ {a : Type} . a [1] → (a, a [0])
diagE [x] = (x, [x])

fst : ∀ {a : Type, b : Type} . (a, b [0]) → a
fst (x, [_]) = x

main : Int
main = fst (diagE [1])
